--- a/src/λ-interpreter/λ-interpreter/λ-interpreter.fsproj
+++ b/src/λ-interpreter/λ-interpreter/λ-interpreter.fsproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>λ_interpreter</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Program.fs"/>
+        <Compile Include="Interpreter.fs" />
     </ItemGroup>
 
 </Project>
