--- a/src/Lazy/Lazy/Lazy.fsproj
+++ b/src/Lazy/Lazy/Lazy.fsproj
@@ -9,6 +9,7 @@
         <Compile Include="Lazy.fs" />
         <Compile Include="ConcurrentLazy.fs" />
         <Compile Include="LockFreeLazy.fs" />
+        <Compile Include="LazyFactory.fs" />
     </ItemGroup>
 
 </Project>
